refactor: Extract types into models; update docs
- Check length of threads and comments against limit
