# backend/docs/swagger.json
@@ -37,7 +37,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/comments.CreateCommentRequestJson"
+                            "$ref": "#/definitions/models.CreateCommentRequest"
                         }
                     }
                 ],
@@ -45,7 +45,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tutorial.Comment"
+                            "$ref": "#/definitions/models.Comment"
                         }
                     },
                     "400": {
@@ -89,7 +89,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/comments.CommentUpdateRequestJson"
+                            "$ref": "#/definitions/models.UpdateCommentRequest"
                         }
                     }
                 ],
@@ -178,7 +178,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/threads.CreateThreadRequestJson"
+                            "$ref": "#/definitions/models.CreateThreadRequest"
                         }
                     }
                 ],
@@ -186,7 +186,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tutorial.GetThreadDetailsRow"
+                            "$ref": "#/definitions/models.Thread"
                         }
                     },
                     "400": {
@@ -197,9 +197,6 @@
                     },
                     "405": {
                         "description": "Method not allowed"
-                    },
-                    "413": {
-                        "description": "Input too large"
                     },
                     "500": {
                         "description": "Internal server error"
@@ -251,7 +248,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/threads.SearchThreadResponse"
+                            "$ref": "#/definitions/models.SearchThreadResponse"
                         }
                     },
                     "405": {
@@ -289,7 +286,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/tutorial.Thread"
+                            "$ref": "#/definitions/models.Thread"
                         }
                     },
                     "404": {
@@ -334,7 +331,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/threads.ThreadUpdateRequestJson"
+                            "$ref": "#/definitions/models.UpdateThreadRequest"
                         }
                     }
                 ],
@@ -440,7 +437,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/comments.GetCommentResponse"
+                            "$ref": "#/definitions/models.GetCommentResponse"
                         }
                     },
                     "405": {
@@ -472,7 +469,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AuthRequestJson"
+                            "$ref": "#/definitions/models.AuthRequest"
                         }
                     }
                 ],
@@ -480,7 +477,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AuthResponseJson"
+                            "$ref": "#/definitions/models.AuthResponse"
                         }
                     },
                     "400": {
@@ -515,7 +512,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.AuthRequestJson"
+                            "$ref": "#/definitions/models.AuthRequest"
                         }
                     }
                 ],
@@ -523,7 +520,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AuthResponseJson"
+                            "$ref": "#/definitions/models.AuthResponse"
                         }
                     },
                     "400": {
@@ -543,40 +540,7 @@
         }
     },
     "definitions": {
-        "comments.CommentUpdateRequestJson": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                }
-            }
-        },
-        "comments.CreateCommentRequestJson": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "thread_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "comments.GetCommentResponse": {
-            "type": "object",
-            "properties": {
-                "comments": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/tutorial.Comment"
-                    }
-                },
-                "count": {
-                    "type": "integer"
-                }
-            }
-        },
-        "models.AuthRequestJson": {
+        "models.AuthRequest": {
             "type": "object",
             "properties": {
                 "password": {
@@ -587,7 +551,7 @@
                 }
             }
         },
-        "models.AuthResponseJson": {
+        "models.AuthResponse": {
             "type": "object",
             "properties": {
                 "token": {
@@ -598,89 +562,14 @@
                 }
             }
         },
-        "pgtype.InfinityModifier": {
-            "type": "integer",
-            "enum": [
-                1,
-                0,
-                -1
-            ],
-            "x-enum-varnames": [
-                "Infinity",
-                "Finite",
-                "NegativeInfinity"
-            ]
-        },
-        "pgtype.Timestamptz": {
-            "type": "object",
-            "properties": {
-                "infinityModifier": {
-                    "$ref": "#/definitions/pgtype.InfinityModifier"
-                },
-                "time": {
-                    "type": "string"
-                },
-                "valid": {
-                    "type": "boolean"
-                }
-            }
-        },
-        "threads.CreateThreadRequestJson": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "threads.SearchThreadResponse": {
-            "type": "object",
-            "properties": {
-                "threads": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/tutorial.GetThreadsByCriteriaRow"
-                    }
-                },
-                "total_threads": {
-                    "type": "integer"
-                }
-            }
-        },
-        "threads.ThreadUpdateRequestJson": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                },
-                "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "tutorial.Comment": {
+        "models.Comment": {
             "type": "object",
             "properties": {
                 "body": {
                     "type": "string"
                 },
                 "created_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
+                    "type": "string"
                 },
                 "creator": {
                     "type": "string"
@@ -692,18 +581,74 @@
                     "type": "string"
                 },
                 "updated_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
+                    "type": "string"
                 }
             }
         },
-        "tutorial.GetThreadDetailsRow": {
+        "models.CreateCommentRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "thread_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateThreadRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.GetCommentResponse": {
+            "type": "object",
+            "properties": {
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Comment"
+                    }
+                },
+                "count": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.SearchThreadResponse": {
+            "type": "object",
+            "properties": {
+                "threads": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.Thread"
+                    }
+                },
+                "total_threads": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.Thread": {
             "type": "object",
             "properties": {
                 "body": {
                     "type": "string"
                 },
                 "created_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
+                    "type": "string"
                 },
                 "creator": {
                     "type": "string"
@@ -724,27 +669,23 @@
                     "type": "string"
                 },
                 "updated_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
+                    "type": "string"
                 }
             }
         },
-        "tutorial.GetThreadsByCriteriaRow": {
+        "models.UpdateCommentRequest": {
             "type": "object",
             "properties": {
                 "body": {
                     "type": "string"
-                },
-                "created_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
-                },
-                "creator": {
+                }
+            }
+        },
+        "models.UpdateThreadRequest": {
+            "type": "object",
+            "properties": {
+                "body": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "num_comments": {
-                    "type": "integer"
                 },
                 "tags": {
                     "type": "array",
@@ -754,35 +695,6 @@
                 },
                 "title": {
                     "type": "string"
-                },
-                "updated_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
-                }
-            }
-        },
-        "tutorial.Thread": {
-            "type": "object",
-            "properties": {
-                "body": {
-                    "type": "string"
-                },
-                "created_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
-                },
-                "creator": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "num_comments": {
-                    "type": "integer"
-                },
-                "title": {
-                    "type": "string"
-                },
-                "updated_time": {
-                    "$ref": "#/definitions/pgtype.Timestamptz"
                 }
             }
         }
