# backend/internal/handlers/comments/create_comment.go
@@ -2,18 +2,15 @@ package comments
 
 import (
 	"backend/internal/database"
+	"backend/internal/models"
 	"backend/internal/utils"
 	"context"
 	"encoding/json"
 	"errors"
 	"github.com/jackc/pgx/v5/pgtype"
 	"net/http"
+	"strings"
 )
-
-type CreateCommentRequestJson struct {
-	ThreadId string `json:"thread_id"`
-	Body     string `json:"body"`
-}
 
 // CreateComment godoc
 // @Summary Handles comment creation requests
@@ -21,9 +18,9 @@ type CreateCommentRequestJson struct {
 // @Tags comment
 // @Accept json
 // @Produce json
-// @Param data body CreateCommentRequestJson true "Comment data"
+// @Param data body models.CreateCommentRequest true "Comment data"
 // @Security ApiKeyAuth
-// @Success 200 {object} tutorial.Comment
+// @Success 200 {object} models.Comment
 // @Failure 400 "Invalid data"
 // @Failure 401 "Invalid JWT token"
 // @Failure 405 "Method not allowed"
@@ -43,7 +40,7 @@ func CreateComment(w http.ResponseWriter, r *http.Request) {
 	}
 
 	// Get thread ID and comment body from request
-	var createCommentRequest CreateCommentRequestJson
+	var createCommentRequest models.CreateCommentRequest
 
 	err := json.NewDecoder(r.Body).Decode(&createCommentRequest)
 
@@ -59,7 +56,19 @@ func CreateComment(w http.ResponseWriter, r *http.Request) {
 	}
 
 	threadId := createCommentRequest.ThreadId
-	body := createCommentRequest.Body
+	body := strings.TrimSpace(createCommentRequest.Body)
+
+	// Ensure comment body is not empty and is not too long
+	if len(body) == 0 || len(body) > 3000 {
+		utils.Log("CreateComment", "Invalid comment body", errors.New("invalid comment body"))
+		w.WriteHeader(http.StatusBadRequest)
+		_, err := w.Write([]byte("Invalid data"))
+		if err != nil {
+			utils.Log("CreateComment", "Unable to write response", err)
+			return
+		}
+		return
+	}
 
 	// Get and verify JWT token from request header
 	token := r.Header.Get("Authorization")[7:]
@@ -104,7 +113,7 @@ func CreateComment(w http.ResponseWriter, r *http.Request) {
 		ThreadID: pgThreadId,
 	}
 
-	comment, err := queries.CreateComment(ctx, params)
+	pgComment, err := queries.CreateComment(ctx, params)
 
 	if err != nil {
 		utils.Log("CreateComment", "Unable to create comment", err)
@@ -115,6 +124,8 @@ func CreateComment(w http.ResponseWriter, r *http.Request) {
 			return
 		}
 	}
+
+	comment := database.FormatPgComment(pgComment)
 
 	// Return comment as JSON object
 	w.Header().Set("Content-Type", "application/json")
