# backend/internal/models/update_comment_request.go
@@ -1,0 +1,5 @@
+package models
+
+type UpdateCommentRequest struct {
+	Body string `json:"body"`
+}
